Split the hashtable from main.c into several files, there are still errors

--- a/data_structures/hash_table/c++/linked_list_hash_table/Makefile
+++ b/data_structures/hash_table/c++/linked_list_hash_table/Makefile
@@ -2,7 +2,7 @@ GENERAT = *.o app linked_list/*.o
 CC = g++
 all: app	
 
-app: main.o linked_list/linked_list.o
+app: main.o hash_table.o linked_list/linked_list.o
 		$(CC) $^ -o $@
 
 %.o: %.c
