Add CXXFLAGS for debug and fixed a bug related to the lack of memory for an element of a linked list

--- a/data_structures/hash_table/c++/linked_list_hash_table/Makefile
+++ b/data_structures/hash_table/c++/linked_list_hash_table/Makefile
@@ -1,12 +1,14 @@
 GENERAT = *.o app linked_list/*.o
 CC = g++
+CXXFLAGS = -g -Wall
+
 all: app	
 
 app: main.o hash_table.o linked_list/linked_list.o
 		$(CC) $^ -o $@
 
 %.o: %.c
-		$(CC) -c $< -o $@
+		$(CC) -c $< -o $@ $(CXXFLAGS)
 
 clean:
 		rm -f $(GENERAT)
